--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-
+future~=0.18.2
+scikit-learn~=1.2.0
+numpy~=1.24.1
+requests~=2.28.1
+pandas~=1.4.3
+scipy~=1.9.0
+SciencePlots~=2.0.1
+matplotlib~=3.6.2
+Pillow~=9.4.0
+pyspark~=3.3.1
+customtkinter~=5.0.3
